# hexapod

./: .gitignore  PROJECT_QUALITY_REPORT.md  README.md  README_ROS2_IMPLEMENTATION.md  diagnostic_check.sh
hexapod/: package.xml  setup.cfg  setup.py
hexapod/config/: controllers.yaml  ros_gz_bridge_gazebo.yaml  urdf.rviz
hexapod/hexapod_model_description/: hexapod_walker.py
hexapod/launch/: display.launch.py  walking_demo.launch.py
hexapod/meshes/: coxa_2_link_1.stl  femur_2_link_1.stl  femur_6_link_1.stl  tibia_3_link_1.stl  tibia_4_link_1.stl
hexapod/urdf/: common_properties.xacro  hexapod_base.xacro  hexapod_base_gazebo.xacro  hexapod_gazebo.xacro  hexapod_model.gazebo  hexapod_model.gazebo.xacro  hexapod_model.ros2control  hexapod_model.urdf.xacro  hexapod_model.xacro  hexapod_transmissions.xacro  materials.xacro
hexapod_bringup/: CMakeLists.txt  package.xml
hexapod_bringup/launch/: gazebo.launch.py  gazebo.launch.xml  hexapod_complete.launch.py  rosbridge.launch.py
hexapod_control/: package.xml  setup.py
hexapod_control/config/: hexapod_controllers.yaml
hexapod_control/hexapod_control/: hexapod_teleop.py  joint_controller.py  ros2_control_walking_controller.py  rotation.py  test_controller.py  test_controller_ros2.py  walking_controller.py
hexapod_control/launch/: hexapod_control.launch.py  simple_walk.launch.py
hexapod_gz/: CMakeLists.txt  package.xml
hexapod_gz/launch/: gazebo.launch.py
hexapod_gz/rviz/: hexapod.rviz
hexapod_gz/worlds/: empty_ode.sdf
hexapod_model_description/: package.xml  setup.cfg  setup.py
hexapod_model_description/config/: initial_positions.yaml
hexapod_model_description/contact/: contact_sensor.py
hexapod_model_description/control/: controller_manager.yaml  hexapod.ros2_control copy.xacro  hexapod.ros2_control.xacro
hexapod_model_description/gazebo/: hexapod.gazebo.xacro
hexapod_model_description/launch/: display.launch.py  gazebo.launch.py
hexapod_model_description/meshes/: base_link.stl  coxa_2_link.stl  coxa_3_link.stl  coxa_4_link.stl  coxa_5_link.stl  coxa_6_link.stl  femur_2_link.stl  femur_4_link.stl  femur_5_link.stl  tibia_1_link.stl  tibia_1_link_1.stl  tibia_3_link.stl  tibia_5_link.stl
hexapod_model_description/urdf/: hexapod.gazebo.xacro  hexapod.urdf.xacro  hexapod_ee.urdf.xacro  hexapod_leg_ee.urdf.xacro  hexapod_model.ros2_control.xacro  hexapod_model.transmissions.xacro  hexapod_model.urdf.xacro  materials.xacro
