<?x  <name>hexapod_model_description</name>
  <version>0.0.0</version>
  <description>Hexapod robot model description with URDF, meshes, and configuration files</description>
  <maintainer email="minindupasan@gmail.com">minindu</maintainer>
  <license>Apache-2.0</license>rsion="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>hexapod_model_description</name>
  <version>0.0.0</version>
<description>The hexapod_model_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
